After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 695650 - recorder: Disconnect stage signals when not recording
recorder: Disconnect stage signals when not recording
Status: RESOLVED FIXED
Product: gnome-shell
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gnome-shell-maint
gnome-shell-maint
Depends on:
Blocks:
 
 
Reported: 2013-03-11 18:43 UTC by drago01
Modified: 2013-03-11 19:13 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
recorder: Disconnect stage signals when not recording (3.82 KB, patch)
2013-03-11 18:43 UTC, drago01
reviewed Details | Review
recorder: Disconnect stage signals when not recording (5.12 KB, patch)
2013-03-11 19:02 UTC, drago01
committed Details | Review

Description drago01 2013-03-11 18:43:17 UTC
See patch.
Comment 1 drago01 2013-03-11 18:43:20 UTC
Created attachment 238617 [details] [review]
recorder: Disconnect stage signals when not recording

This causes unnecessary work, so only connect them when needed i.e
while recording.
Comment 2 Jasper St. Pierre (not reading bugmail) 2013-03-11 18:52:29 UTC
Review of attachment 238617 [details] [review]:

::: src/shell-recorder.c
@@ +856,2 @@
 {
+      g_signal_connect (recorder->stage, "destroy",

Bad indentation?

@@ +869,2 @@
+static void
+shell_recorder_disconnect_stage_callbacks (ShellRecorder *recorder)

Inconsistent name: either use recorder_disconnect_stage_callbacks or shell_recorder_connect_stage_callbacks
Comment 3 drago01 2013-03-11 19:02:25 UTC
Created attachment 238618 [details] [review]
recorder: Disconnect stage signals when not recording

This causes unnecessary work, so only connect them when needed i.e
while recording.



---

Fixed style issues.
Comment 4 Jasper St. Pierre (not reading bugmail) 2013-03-11 19:09:40 UTC
Review of attachment 238618 [details] [review]:

OK.
Comment 5 drago01 2013-03-11 19:13:23 UTC
Attachment 238618 [details] pushed as 07de96e - recorder: Disconnect stage signals when not recording